--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-decouple>=0.0.7
-Django>=4.0,<5.0
+python-decouple==3.8
+cryptography==43.0.1
+Django==4.2.4
 djangorestframework>=3.14.0
 dj-rest-auth>=2.1.9
 django-allauth>=0.50.0
